k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-api-service
  namespace: flask-app
  labels:
    app: flask-api
spec:
  type: ClusterIP
  selector:
    app: flask-api
  ports:
    - name: http
      port: 80
      targetPort: 5000
      protocol: TCP
